fixed reel blurring in fullscreen bug

--- a/personal-site/src/Styles/Components.css
+++ b/personal-site/src/Styles/Components.css
@@ -75,4 +75,5 @@
 
 .Reel:fullscreen {
     opacity: 100% !important;
+    filter: blur(0px) !important;
 }
